Update contact details and job descriptions

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
                 <p>Вересень 202x - дотепер | Україна</p>
                 <ul>
                     <li>
-                        Lorem ipsum dolor sit amet.
+                        Maecenas dolor sapien, pulvinar eget erat.
                     </li>
                     <li>
-                        Eos dignissimos quidem et iure ipsam est soluta.
+                       Aliquam suscipit porta vehicula.
                     </li>
                     <li>
-                        A ipsum quidem vel similique quam et enim.
+                        Vivamus finibus consequat porta. 
                     </li>
                     <li>
-                        Vel repellendus quia quo deleniti ratione.
+                        Nulla id nibh ut nisi blandit aliquam ut non mi. 
                     </li>
                 </ul>
             </div>
         </div>
         <footer class="black-line">
             <div class="footer-content">
-                <p>Контакти: +380 093 000 00 00</p>
+                <p>Контакти: +380 063 000 00 00</p>
                 <p>mymail@gmail.com</p>
             </div>
         </footer>
